# python-htmlgen

./: .gitignore  .travis.yml  LICENSE  NEWS.md  NEWS.rst  README.md  README.rst  elements.rst  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-and-lint.yml
htmlgen/: __init__.py  __init__.pyi  attribute.py  attribute.pyi  block.py  block.pyi  document.py  document.pyi  element.py  element.pyi  form.py  form.pyi  generator.py  generator.pyi  image.py  image.pyi  inline.py  inline.pyi  link.py  link.pyi  list.py  list.pyi  structure.py  structure.pyi  table.py  table.pyi  time.py  time.pyi  timeutil.py  timeutil.pyi  video.py  video.pyi
test_htmlgen/: attribute.py  block.py  document.py  element.py  form.py  generator.py  image.py  inline.py  link.py  list.py  structure.py  table.py  time.py  util.py  video.py
